--- a/cucumber/cucumber-level-2/pom.xml
+++ b/cucumber/cucumber-level-2/pom.xml
@@ -4,12 +4,12 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>hello.world</groupId>
-	<artifactId>hello-world</artifactId>
+	<groupId>cucumber.level.2</groupId>
+	<artifactId>cucumber-level-2</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0</version>
 
-	<name>hello-world</name>
+	<name>cucumber-level-2</name>
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
@@ -26,7 +26,7 @@
 			<version>4.2.6</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-junit</artifactId>
@@ -49,4 +49,5 @@
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
